# genius-hour

./: Cargo.toml  mnist_model.bincode
.github/workflows/: deploy.yml
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.css  App.tsx  ProbabilityChart.css  ProbabilityChart.tsx  Writeup.tsx
genius-hour/: Cargo.toml  index.html  mnist_model.bincode
genius-hour/pkg/: genius_hour.d.ts  genius_hour.js  genius_hour_bg.js  genius_hour_bg.wasm  genius_hour_bg.wasm.d.ts  package.json
genius-hour/src/: activation.rs  layer.rs  lib.rs  loss.rs  main.rs  mnist_loader.rs  network.rs  serialization.rs
pkg/: genius_hour.js  genius_hour_bg.wasm  genius_hour_bg.wasm.d.ts
src/: main.rs  network.rs
src/models/: perceptron.rs
