[package]
name = "genius-hour"
version = "0.1.0"
edition = "2024"
authors = ["Dylan Mashini <dylanmashini123@gmail.com>"]

[dependencies]
nalgebra = "0.32"
rand = {version = "0.9.0"}
rand_distr = "0.5.1"
getrandom = { version = "0.3.2", features = [], default-features=false }
flate2 = { version = "1.0"}
byteorder = { version = "1.4"}
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
wasm-bindgen = "0.2.84"
once_cell = "1.21.3"

[lib]
crate-type = ["cdylib", "rlib"]


[target.wasm32-unknown-unknown]
rustflags = ['--cfg', 'getrandom_backend="wasm_js"']
